--- a/style.css
+++ b/style.css
@@ -11,7 +11,7 @@
 
 h1 {
     font-weight: 600;
-    font-size: 68px;
+    font-size: 5.3vw;
     line-height: 100%;
     vertical-align: middle;
 
@@ -20,38 +20,40 @@ h1 {
 h2 {
 
     font-weight: 600;
-    font-size: 32px;
-    line-height: 42px;
+    font-size: 2vw;
+    line-height: 3.28vw;
     text-align: center;
 
 }
 
 h6 {
     font-weight: 600;
-    font-size: 20px;
-    line-height: 30px;
+    font-size: 1.56vw;
+    line-height: 2.35vw;
     vertical-align: middle;
 
 }
 
 p {
     font-weight: 400;
-    font-size: 17px;
-    line-height: 27px;
+    font-size: 1.33vw;
+    line-height: 2.11vw;
     vertical-align: middle;
 
 }
 
 header {
-    display: grid;
-    grid-template-columns: auto auto;
+    display: flex;
+    /* display: grid; */
+    /* grid-template-columns: repeat(auto-fit,minmax(350px,1fr)); */
+    /* grid-template-columns: auto auto auto ; */
     width: 1280;
     height: 78;
     justify-content: space-between;
-    padding-top: 24px;
-    padding-right: 42px;
-    padding-bottom: 24px;
-    padding-left: 42px;
+    padding-top: 1.87vw;
+    padding-right: 3.3vw;
+    padding-bottom: 1.87vw;
+    padding-left: 3.3vw;
 }
 
 
@@ -61,14 +63,10 @@ header {
     align-items: center;
     /* width: 209px;
 height: 27px; */
-    gap: 24px;
+    gap: 1.87vw;
 
 }
 
-.container {
-    /* display: grid; */
-    /* grid-auto-rows: 1fr 1fr; */
-}
 
 .section1 {
     /* display: grid;
@@ -84,27 +82,32 @@ height: 27px; */
         height: 328;
         /* min-width: 320px;
 max-width: 620px; */
-        gap: 48px;
+        gap: 1.75vw;
 
         >.btn button {
-            width: 211px;
-            height: 78px;
-            padding-top: 24px;
-            padding-right: 64px;
-            padding-bottom: 24px;
-            padding-left: 64px;
-            gap: 10px;
+            width: 16.48vw;
+            height: 6.1vw;
+            padding-top: 1.87vw;
+            padding-right: 5vw;
+            padding-bottom: 1.87vw;
+            padding-left: 5vw;
+            gap: 0.79;
             background-color: #2D2D2D;
             color: White;
             font-weight: 600;
+            font-size: 1.5vw;
 
         }
 
         >.item:nth-child(2) {
             display: flex;
             justify-content: center;
+           
         }
     }
+}
+.section1 img{
+    width: 37vw;
 }
 
 .section2 {
@@ -114,10 +117,30 @@ max-width: 620px; */
     width: 1280;
     height: 130.8278350830078;
     justify-content: space-between;
-    padding-top: 42px;
-    padding-right: 68px;
-    padding-bottom: 42px;
-    padding-left: 68px;
+    padding-top: 3.3vw;
+    padding-right: 5.3vw;
+    padding-bottom: 3.3vw;
+    padding-left: 5.3vw;
+    gap: 1.87vw;
+
+    >img:nth-child(1){
+width: 9.1vw;
+height: 3vh;
+    }
+    >img:nth-child(2){
+        width: 6.8vw;
+        height: 3vh;
+    }
+    >img:nth-child(3){
+        width: 9.3vw;
+        height: 3vh;
+    }
+    >img:nth-child(4){
+        height: 3vh;
+    }
+    >img:nth-child(5){
+        height: 3vh;
+    }
 
 }
 
@@ -126,7 +149,7 @@ max-width: 620px; */
         display: flex;
         /* display: grid;
         grid-template-columns: auto auto auto; */
-        gap: 24px;
+        gap: 1.87vw;
 
         >.card {
             display: flex;
@@ -136,11 +159,14 @@ max-width: 620px; */
             width: 394.6666564941406;
             height: 429;
             /* min-width: 320px; */
-            gap: 42px;
+            gap: 3.3vw;
             padding-top: 64px;
-            padding-right: 42px;
+            padding-right: 3.3vw;
             padding-bottom: 64px;
-            padding-left: 42px;
+            padding-left: 3.3vw;
+            >img{
+                width: 20.8vw;
+            }
 
         }
     }
@@ -154,19 +180,23 @@ max-width: 620px; */
     text-align: center;
     width: 1280;
     height: 1030;
-    gap: 42px;
+    gap: 3.3vw;
 
-    padding-top: 42px;
-    padding-right: 24px;
-    padding-bottom: 42px;
-    padding-left: 24px;
+    padding-top: 3.3vw;
+    padding-right: 1.87vw;
+    padding-bottom: 3.3vw;
+    padding-left: 1.87vw;
 
     >.cards {
         display: grid;
-        grid-template-columns: auto auto auto;
+        /* grid-template-columns: repeat(auto-fit,minmax(350px,1fr)); */
+        grid-template-columns: auto auto auto ;
 
         >.card {
             text-align: left;
+            >img{
+                width: 30vw;
+            }
         }
 
     }
@@ -178,16 +208,17 @@ max-width: 620px; */
     text-align: center;
     width: 1280;
     height: 1030;
-    gap: 42px;
-    padding-top: 42px;
-    padding-right: 24px;
-    padding-bottom: 42px;
-    padding-left: 24px;
+    gap: 3.3vw;
+    padding-top: 3.3vw;
+    padding-right: 1.87vw;
+    padding-bottom: 3.3vw;
+    padding-left: 1.87vw;
 
     >.cards {
         display: grid;
-        grid-template-columns: auto auto auto;
-        gap: 24px;
+        /* grid-template-columns: repeat(auto-fit,minmax(350px,1fr)); */
+        grid-template-columns: auto auto auto ;
+        gap: 1.87vw;
 
         >.card {
             display: flex;
@@ -198,16 +229,25 @@ max-width: 620px; */
             height: 330;
             /* min-width: 320px; */
             gap: 68px;
-            padding: 42px;
+            padding: 3.3vw;
             background-color: #F3F3F3;
 
             >.scard {
                 display: flex;
+                >.item:nth-child(1){
+                    >img{
+                        width: 3.9vw;
+                    }
+                }
 
                 >.item:nth-child(2) {
                     display: flex;
                     flex-direction: column;
                     text-align: left;
+                    >img{
+                        width:9.6vw
+                    }
+
                 }
 
             }
@@ -225,11 +265,11 @@ footer {
     flex-direction: column;
     width: 1280;
     height: 426;
-    gap: 24px;
-    padding-top: 42px;
-    padding-right: 24px;
+    gap: 1.87vw;
+    padding-top: 3.3vw;
+    padding-right: 1.87vw;
     padding-bottom: 86px;
-    padding-left: 24px;
+    padding-left: 1.87vw;
 
     >h2 {
         text-align: left;
@@ -242,11 +282,11 @@ footer {
         >.card:nth-child(1) {
             display: flex;
             flex-direction: column;
-            gap: 42px;
+            gap: 3.3vw;
 
             >.v {
                 display: flex;
-                gap: 24px;
+                gap: 1.87vw;
             }
         }
 
@@ -254,7 +294,7 @@ footer {
             display: flex;
             flex-direction: column;
             width: 520;
-            gap: 24px;
+            gap: 1.87vw;
 
             >input[type="text"] {
                 background-color: #F3F3F3;
@@ -263,10 +303,10 @@ footer {
                 /* max-width: 520px; */
                 gap: 10px;
 
-                padding-top: 16px;
-                padding-right: 24px;
-                padding-bottom: 16px;
-                padding-left: 24px;
+                padding-top: 1.25vw;
+                padding-right: 1.87vw;
+                padding-bottom: 1.25vw;
+                padding-left: 1.87vw;
                 border: 0px;
             }
 
@@ -277,23 +317,24 @@ footer {
                 /* max-width: 520px; */
                 gap: 10px;
 
-                padding-top: 16px;
-                padding-right: 24px;
-                padding-bottom: 16px;
-                padding-left: 24px;
+                padding-top: 1.25vw;
+                padding-right: 1.87vw;
+                padding-bottom: 1.25vw;
+                padding-left: 1.87vw;
                 border: 0px;
             }
 
             >button {
-                width: 199px;
-                height: 78px;
-                gap: 10px;
-                padding-top: 24px;
-                padding-right: 64px;
-                padding-bottom: 24px;
-                padding-left: 64px;
+                width: 15.5vw;
+                height: 6.1vw;
+                gap: 0.78vw;
+                padding-top: 1.87vw;
+                padding-right: 5vw;
+                padding-bottom: 1.87vw;
+                padding-left: 5vw;
                 background-color: black;
                 color: white;
+                font-size: 1.5vw;
 
             }
 
@@ -301,4 +342,8 @@ footer {
         }
     }
 
+}
+@media screen and (max-width :500px) {
+   
+    
 }
