--- a/style.css
+++ b/style.css
@@ -228,7 +228,7 @@ height: 3vh;
             width: 394.6666564941406;
             height: 330;
             /* min-width: 320px; */
-            gap: 68px;
+            gap: 5.3vw;
             padding: 3.3vw;
             background-color: #F3F3F3;
 
@@ -347,3 +347,4 @@ footer {
    
     
 }
+
